--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,10 +4,96 @@
     <meta charset="utf-8">
     <title>{{ page.title }} - {{ site.title }}</title>
     <meta name="author" content="{{ site.author.name }}">
+
+    <link href="/s/p/boostrap-2.0.4/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/s/css/styles.css" rel="stylesheet">
+    <link href="/s/p/boostrap-2.0.4/css/bootstrap-responsive.min.css" rel="stylesheet">
+
+    <!--[if lt IE 9]>
+    <script src="/s/js/html5.js"></script>
+    <![endif]-->
+
   </head>
   <body>
 
-    {{ content }}
+    <div id="navbar" class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container-fluid">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <a class="brand" href="#">AwsSum</a>
+          <div class="nav-collapse">
+            <ul class="nav">
+              <li class="active"><a href="#">Home</a></li>
+              <li><a href="#new-apis">New APIs</a></li>
+              <li><a href="#bugs">Bugs</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+          </div><!-- /.nav-collapse -->
+        </div><!-- /.container-fluid -->
+      </div><!-- /.navbar-inner -->
+    </div><!-- /#navbar -->
+
+    <div class="container-fluid">
+      <div class="row-fluid">
+        <div id="menu" class="span3">
+          <div class="well sidebar-nav">
+            <ul class="nav nav-list">
+              <li class="nav-header">Sidebar</li>
+              <li class="active"><a href="#">Link</a></li>
+              <li><a href="#">Link</a></li>
+              <li><a href="#">Link</a></li>
+              <li><a href="#">Link</a></li>
+              <li class="nav-header">Sidebar</li>
+              <li><a href="#">Link</a></li>
+              <li><a href="#">Link</a></li>
+              <li><a href="#">Link</a></li>
+              <li><a href="#">Link</a></li>
+              <li><a href="#">Link</a></li>
+              <li><a href="#">Link</a></li>
+              <li class="nav-header">Sidebar</li>
+              <li><a href="#">Link</a></li>
+              <li><a href="#">Link</a></li>
+              <li><a href="#">Link</a></li>
+            </ul>
+          </div><!-- /.well -->
+        </div><!-- /#menu -->
+
+        <div id="content" class="span9">
+
+          {{ content }}
+
+        </div><!-- /#content -->
+      </div><!-- /.row-fluid -->
+
+      <hr>
+
+      <footer>
+        <p>&copy; <a href="http://appsattic.com/">AppsAttic Ltd</a> 2012</p>
+      </footer>
+
+    </div><!--/.fluid-container-->
+
+
+    <script src="/s/js/jquery-1.7.2.min.js"></script>
+    <!--
+        <script src="../assets/js/bootstrap-transition.js"></script>
+        <script src="../assets/js/bootstrap-alert.js"></script>
+        <script src="../assets/js/bootstrap-modal.js"></script>
+        <script src="../assets/js/bootstrap-dropdown.js"></script>
+        <script src="../assets/js/bootstrap-scrollspy.js"></script>
+        <script src="../assets/js/bootstrap-tab.js"></script>
+        <script src="../assets/js/bootstrap-tooltip.js"></script>
+        <script src="../assets/js/bootstrap-popover.js"></script>
+        <script src="../assets/js/bootstrap-button.js"></script>
+        <script src="../assets/js/bootstrap-collapse.js"></script>
+        <script src="../assets/js/bootstrap-carousel.js"></script>
+        <script src="../assets/js/bootstrap-typeahead.js"></script>
+    -->
 
   </body>
 </html>
