--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,9 +5,9 @@
     <title>{{ page.title }} - {{ site.title }}</title>
     <meta name="author" content="{{ site.author.name }}">
 
-    <link href="/s/p/boostrap-2.0.4/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/s/p/bootstrap-2.0.4/css/bootstrap.min.css" rel="stylesheet">
     <link href="/s/css/styles.css" rel="stylesheet">
-    <link href="/s/p/boostrap-2.0.4/css/bootstrap-responsive.min.css" rel="stylesheet">
+    <link href="/s/p/bootstrap-2.0.4/css/bootstrap-responsive.min.css" rel="stylesheet">
 
     <!--[if lt IE 9]>
     <script src="/s/js/html5.js"></script>
