--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,22 +43,28 @@
         <div id="menu" class="span3">
           <div class="well sidebar-nav">
             <ul class="nav nav-list">
-              <li class="nav-header">Sidebar</li>
-              <li class="active"><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li class="nav-header">Sidebar</li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
+
+              <li class="nav-header">Amazon</li>
+              <li class="active"><a href="#amazon-s3">Simple Storage Service (S3)</a></li>
+              <li><a href="#amazon-ec2">Elastic Compute Cloud (EC2)</a></li>
+              <li><a href="#amazon-ses">Simple Email Service (SES)</a></li>
+              <li><a href="#amazon-sns">Simple Notification Service (SNS)</a></li>
+              <li><a href="#amazon-elb">ElasticLoad Balancing (ELB)</a></li>
+              <li><a href="#amazon-fps">Flexible Payments Service (FPS)</a></li>
+
               <li class="nav-header">Sidebar</li>
               <li><a href="#">Link</a></li>
               <li><a href="#">Link</a></li>
               <li><a href="#">Link</a></li>
+              <li><a href="#">Link</a></li>
+              <li><a href="#">Link</a></li>
+              <li><a href="#">Link</a></li>
+
+              <li class="nav-header">Sidebar</li>
+              <li><a href="#">Link</a></li>
+              <li><a href="#">Link</a></li>
+              <li><a href="#">Link</a></li>
+
             </ul>
           </div><!-- /.well -->
         </div><!-- /#menu -->
