--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,15 +45,15 @@
             <ul class="nav nav-list">
 
               <li class="nav-header">Amazon</li>
-              <li class="active"><a href="#amazon-s3">Simple Storage Service (S3)</a></li>
-              <li><a href="#amazon-ec2">Elastic Compute Cloud (EC2)</a></li>
-              <li><a href="#amazon-ses">Simple Email Service (SES)</a></li>
-              <li><a href="#amazon-sns">Simple Notification Service (SNS)</a></li>
-              <li><a href="#amazon-elb">ElasticLoad Balancing (ELB)</a></li>
-              <li><a href="#amazon-fps">Flexible Payments Service (FPS)</a></li>
+              <li id="amazon-s3"><a href="#amazon-s3">Simple Storage Service (S3)</a></li>
+              <li id="amazon-ec2"><a href="#amazon-ec2">Elastic Compute Cloud (EC2)</a></li>
+              <li id="amazon-ses"><a href="#amazon-ses">Simple Email Service (SES)</a></li>
+              <li id="amazon-sns"><a href="#amazon-sns">Simple Notification Service (SNS)</a></li>
+              <li id="amazon-elb"><a href="#amazon-elb">ElasticLoad Balancing (ELB)</a></li>
+              <li id="amazon-fps"><a href="#amazon-fps">Flexible Payments Service (FPS)</a></li>
 
               <li class="nav-header">Sidebar</li>
-              <li><a href="#">Link</a></li>
+              <li class="active"><a href="#">Link</a></li>
               <li><a href="#">Link</a></li>
               <li><a href="#">Link</a></li>
               <li><a href="#">Link</a></li>
