--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -84,8 +84,9 @@
 
     </div><!--/.fluid-container-->
 
-
     <script src="/s/js/jquery-1.7.2.min.js"></script>
+    <script src="/s/js/jquery.ba-hashchange.min.js"></script>
+    <script src="/s/js/ready.js"></script>
     <!--
         <script src="../assets/js/bootstrap-transition.js"></script>
         <script src="../assets/js/bootstrap-alert.js"></script>
