--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
           <a class="brand" href="#">AwsSum</a>
           <div class="nav-collapse">
             <ul class="nav">
-              <li class="active"><a href="#">Home</a></li>
+              <li><a href="#">Home</a></li>
               <li><a href="#new-apis">New APIs</a></li>
               <li><a href="#bugs">Bugs</a></li>
               <li><a href="#about">About</a></li>
@@ -44,26 +44,24 @@
           <div class="well sidebar-nav">
             <ul class="nav nav-list">
 
-              <li class="nav-header">Amazon</li>
-              <li id="amazon-s3"><a href="#amazon-s3">Simple Storage Service (S3)</a></li>
-              <li id="amazon-ec2"><a href="#amazon-ec2">Elastic Compute Cloud (EC2)</a></li>
-              <li id="amazon-ses"><a href="#amazon-ses">Simple Email Service (SES)</a></li>
-              <li id="amazon-sns"><a href="#amazon-sns">Simple Notification Service (SNS)</a></li>
-              <li id="amazon-elb"><a href="#amazon-elb">ElasticLoad Balancing (ELB)</a></li>
-              <li id="amazon-fps"><a href="#amazon-fps">Flexible Payments Service (FPS)</a></li>
+              <li class="basics nav-header">Basics</li>
+              <li class="loading"><a href="#loading">Loading</a></li>
+              <li class="operations"><a href="#operations">Operations</a></li>
 
-              <li class="nav-header">Sidebar</li>
-              <li class="active"><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-
-              <li class="nav-header">Sidebar</li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
+              <li class="amazon nav-header">Amazon</li>
+              <li class="amazon-s3"><a href="#amazon-s3">Simple Storage Service (S3)</a></li>
+              <li class="amazon-ec2"><a href="#amazon-ec2">Elastic Compute Cloud (EC2)</a></li>
+              <li class="amazon-ses"><a href="#amazon-ses">Simple Email Service (SES)</a></li>
+              <li class="amazon-sns"><a href="#amazon-sns">Simple Notification Service (SNS)</a></li>
+              <li class="amazon-elb"><a href="#amazon-elb">ElasticLoad Balancing (ELB)</a></li>
+              <li class="amazon-fps"><a href="#amazon-fps">Flexible Payments Service (FPS)</a></li>
+              <li class="amazon-simpledb"><a href="#amazon-simpledb">SimpleDB (SDB)</a></li>
+              <li class="amazon-route53"><a href="#amazon-route53">Route53 (R53)</a></li>
+              <li class="amazon-elasticache"><a href="#amazon-elasticache">ElastiCache</a></li>
+              <li class="amazon-cloudfront"><a href="#amazon-cloudfront">CloudFront</a></li>
+              <li class="amazon-cloudwatch"><a href="#amazon-cloudwatch">CloudWatch</a></li>
+              <li class="amazon-dynamodb"><a href="#amazon-dynamodb">DynamoDB</a></li>
+              <li class="amazon-swf"><a href="#amazon-swf">Simple Workflow Service (SWF)</a></li>
 
             </ul>
           </div><!-- /.well -->
