Make all the tab classnames start with tab-*

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,11 +27,11 @@
           <a class="brand" href="#">AwsSum</a>
           <div class="nav-collapse">
             <ul class="nav">
-              <li><a href="#">Home</a></li>
-              <li><a href="#new-apis">New APIs</a></li>
-              <li><a href="#bugs">Bugs</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>
+              <li class="tab-home"><a href="#home">Home</a></li>
+              <li class="tab-new-apis"><a href="#new-apis">New APIs</a></li>
+              <li class="tab-bugs"><a href="#bugs">Bugs</a></li>
+              <li class="tab-about"><a href="#about">About</a></li>
+              <li class="tab-contact"><a href="#contact">Contact</a></li>
             </ul>
           </div><!-- /.nav-collapse -->
         </div><!-- /.container-fluid -->
@@ -44,24 +44,24 @@
           <div class="well sidebar-nav">
             <ul class="nav nav-list">
 
-              <li class="basics nav-header">Basics</li>
-              <li class="loading"><a href="#loading">Loading</a></li>
-              <li class="operations"><a href="#operations">Operations</a></li>
+              <li class="tab-basics nav-header">Basics</li>
+              <li class="tab-loading"><a href="#loading">Loading</a></li>
+              <li class="tab-operations"><a href="#operations">Operations</a></li>
 
-              <li class="amazon nav-header">Amazon</li>
-              <li class="amazon-s3"><a href="#amazon-s3">Simple Storage Service (S3)</a></li>
-              <li class="amazon-ec2"><a href="#amazon-ec2">Elastic Compute Cloud (EC2)</a></li>
-              <li class="amazon-ses"><a href="#amazon-ses">Simple Email Service (SES)</a></li>
-              <li class="amazon-sns"><a href="#amazon-sns">Simple Notification Service (SNS)</a></li>
-              <li class="amazon-elb"><a href="#amazon-elb">ElasticLoad Balancing (ELB)</a></li>
-              <li class="amazon-fps"><a href="#amazon-fps">Flexible Payments Service (FPS)</a></li>
-              <li class="amazon-simpledb"><a href="#amazon-simpledb">SimpleDB (SDB)</a></li>
-              <li class="amazon-route53"><a href="#amazon-route53">Route53 (R53)</a></li>
-              <li class="amazon-elasticache"><a href="#amazon-elasticache">ElastiCache</a></li>
-              <li class="amazon-cloudfront"><a href="#amazon-cloudfront">CloudFront</a></li>
-              <li class="amazon-cloudwatch"><a href="#amazon-cloudwatch">CloudWatch</a></li>
-              <li class="amazon-dynamodb"><a href="#amazon-dynamodb">DynamoDB</a></li>
-              <li class="amazon-swf"><a href="#amazon-swf">Simple Workflow Service (SWF)</a></li>
+              <li class="tab-amazon nav-header">Amazon</li>
+              <li class="tab-amazon-s3"><a href="#amazon-s3">Simple Storage Service (S3)</a></li>
+              <li class="tab-amazon-ec2"><a href="#amazon-ec2">Elastic Compute Cloud (EC2)</a></li>
+              <li class="tab-amazon-ses"><a href="#amazon-ses">Simple Email Service (SES)</a></li>
+              <li class="tab-amazon-sns"><a href="#amazon-sns">Simple Notification Service (SNS)</a></li>
+              <li class="tab-amazon-elb"><a href="#amazon-elb">ElasticLoad Balancing (ELB)</a></li>
+              <li class="tab-amazon-fps"><a href="#amazon-fps">Flexible Payments Service (FPS)</a></li>
+              <li class="tab-amazon-simpledb"><a href="#amazon-simpledb">SimpleDB (SDB)</a></li>
+              <li class="tab-amazon-route53"><a href="#amazon-route53">Route53 (R53)</a></li>
+              <li class="tab-amazon-elasticache"><a href="#amazon-elasticache">ElastiCache</a></li>
+              <li class="tab-amazon-cloudfront"><a href="#amazon-cloudfront">CloudFront</a></li>
+              <li class="tab-amazon-cloudwatch"><a href="#amazon-cloudwatch">CloudWatch</a></li>
+              <li class="tab-amazon-dynamodb"><a href="#amazon-dynamodb">DynamoDB</a></li>
+              <li class="tab-amazon-swf"><a href="#amazon-swf">Simple Workflow Service (SWF)</a></li>
 
             </ul>
           </div><!-- /.well -->
