--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -21,6 +21,7 @@
     <li class="tab-amazon-cloudwatch"><a href="#amazon-cloudwatch">CloudWatch</a></li>
     <li class="tab-amazon-dynamodb"><a href="#amazon-dynamodb">DynamoDB</a></li>
     <li class="tab-amazon-swf"><a href="#amazon-swf">Simple Workflow Service (SWF)</a></li>
+    <li class="tab-amazon-iam"><a href="#amazon-iam">Identity and Access Management (IAM)</a></li>
 
   </ul>
 </div><!-- /.well -->
