Make menus nicer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,6 +41,8 @@
     <div class="container-fluid">
       <div class="row-fluid">
 
+        <h2>AwsSum v0.7.0</h2>
+
         <div id="menu" class="span3">
           {% include menu.html %}
         </div><!-- /#menu -->
