Add a Name.Other class (.nx)

--- a/s/css/styles.css
+++ b/s/css/styles.css
@@ -50,6 +50,7 @@ body {
 .highlight .nn { color: #555555 } /* Name.Namespace */
 .highlight .nt { color: #000080 } /* Name.Tag */
 .highlight .nv { color: #008080 } /* Name.Variable */
+.highlight .nx { color: #000080 } /* Name.Other */
 .highlight .ow { font-weight: bold } /* Operator.Word */
 .highlight .w { color: #bbbbbb } /* Text.Whitespace */
 .highlight .mf { color: #009999 } /* Literal.Number.Float */
