Add more of the intro pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,10 +28,10 @@
           <div class="nav-collapse">
             <ul class="nav">
               <li class="tab-home"><a href="#home">Home</a></li>
-              <li class="tab-new-apis"><a href="#new-apis">New APIs</a></li>
               <li class="tab-bugs"><a href="#bugs">Bugs</a></li>
+              <li class="tab-links"><a href="#links">Links</a></li>
               <li class="tab-about"><a href="#about">About</a></li>
-              <li class="tab-contact"><a href="#contact">Contact</a></li>
+              <li class="tab-links"><a href="#links">Links</a></li>
             </ul>
           </div><!-- /.nav-collapse -->
         </div><!-- /.container-fluid -->
