--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,8 +43,9 @@
         <div id="menu" class="span3">
           <h2>AwsSum v0.7.0</h2>
 
-          {% var menu = 'menu-' + page.id + '.html' %}
+          {% capture menu %}menu-{{ page.id }}.html{% endcapture %}
           {% include menu %}
+
         </div><!-- /#menu -->
 
         <div id="content" class="span9">
