A test for including files

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
           <h2>AwsSum v0.7.0</h2>
 
           {% capture menu %}menu-{{ page.id }}.html{% endcapture %}
-          {% include menu %}
+          {% include $menu %}
 
         </div><!-- /#menu -->
 
