Really, the final test

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,8 @@
           <h2>AwsSum v0.7.0</h2>
 
           {% capture menu %}menu-{{ page.id }}.html{% endcapture %}
-          {% include {{menu}} %}
+          <p>Including {{ menu }}.</p>
+          {% include menu %}
 
         </div><!-- /#menu -->
 
