--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="/">AwsSum v{{ site.version }}</a>
+          <a class="brand" href="/">AwsSum {{ site.version }}</a>
           <div class="nav-collapse">
             <ul class="nav">
               <li class="tab-home"><a href="/">Home</a></li>
