Fix up all the menus, finally!

--- a/_includes/main.html
+++ b/_includes/main.html
@@ -2,7 +2,15 @@
 
   <div id="menu" class="span3">
 
-    {{ menu }}
+    <h2>{{ page.title }}</h2>
+
+    <div class="well sidebar-nav">
+      <ul class="nav nav-list">
+
+        {{ menu }}
+
+      </ul>
+    </div><!-- /.well -->
 
   </div><!-- /#menu -->
 
