--- a/_includes/menu-index.html
+++ b/_includes/menu-index.html
@@ -1,14 +1,36 @@
-<div class="well sidebar-nav">
-  <ul class="nav nav-list">
+  <li class="tab-basics nav-header">Basics</li>
+  <li class="tab-installing"><a href="installing.html">Installing</a></li>
+  <li class="tab-loading"><a href="loading.html">Loading</a></li>
+  <li class="tab-async"><a href="async.html">Async</a></li>
+  <li class="tab-examples"><a href="example.html">Full Example</a></li>
 
-    <li class="tab-basics nav-header">Basics</li>
-    <li class="tab-installing"><a href="#installing">Installing</a></li>
-    <li class="tab-loading"><a href="#loading">Loading</a></li>
-    <li class="tab-async"><a href="#async">Async</a></li>
-    <li class="tab-operations"><a href="#operations">Operations</a></li>
-
-    <li class="tab-amazon nav-header">Web Services</li>
-    <li class="tab-amazon-s3"><a href="amazon.html">Amazon</a></li>
-
-  </ul>
-</div><!-- /.well -->
+  <li class="tab-amazon nav-header">Web Services</li>
+  <li class="tab-amazon"><a href="amazon.html">Amazon</a>
+    <ul>
+      <li class="tab-amazon-s3"><a href="amazon-s3.html">Simple Storage Service (S3)</a>
+        <!--
+      <li class="tab-amazon-ec2"><a href="amazon-ec2.html">Elastic Compute Cloud (EC2)</a>
+      <li class="tab-amazon-emr"><a href="amazon-emr.html">Elastic MapReduce (EMR)</a>
+      <li class="tab-amazon-simpledb"><a href="amazon-simpledb.html">SimpleDB</a>
+      <li class="tab-amazon-sqs"><a href="amazon-sqs.html">Simple Queue Service (SQS)</a>
+      <li class="tab-amazon-sns"><a href="amazon-sns.html">Simple Notification Service (SNS)</a>
+      <li class="tab-amazon-ses"><a href="amazon-ses.html">Simple Email Service (SES)</a>
+      <li class="tab-amazon-route53"><a href="amazon-route53.html">Route53</a>
+      <li class="tab-amazon-elasticache"><a href="amazon-elasticache.html">ElastiCache</a>
+      <li class="tab-amazon-cloudfront"><a href="amazon-cloudfront.html">CloudFront</a>
+      <li class="tab-amazon-elb"><a href="amazon-elb.html">Elastic Load Balancing (ELB)</a>
+      <li class="tab-amazon-dynamodb"><a href="amazon-dynamodb.html">DynamoDB</a>
+      <li class="tab-amazon-swf"><a href="amazon-swf.html">Simple Workflow Service (SWF)</a>
+      <li class="tab-amazon-fps"><a href="amazon-fps.html">Flexible Payments Service (FPS)</a>
+      <li class="tab-amazon-cloudwatch"><a href="amazon-cloudwatch.html">CloudWatch</a>
+      <li class="tab-amazon-iam"><a href="amazon-iam.html">Identity and Access Management (IAM)</a>
+      <li class="tab-amazon-rds"><a href="amazon-rds.html">Relational Database Service (RDS)</a>
+      <li class="tab-amazon-imd"><a href="amazon-imd.html">Instance Metadata (IMD)</a>
+      <li class="tab-amazon-elasticbeanstalk"><a href="amazon-elasticbeanstalk.html">ElasticBeanstalk</a>
+      <li class="tab-amazon-autoscaling"><a href="amazon-autoscaling.html">AutoScaling</a>
+      <li class="tab-amazon-importexport"><a href="amazon-importexport.html">Import/Export</a>
+      <li class="tab-amazon-storagegateway"><a href="amazon-storagegateway.html">Storage Gateway</a>
+      <li class="tab-amazon-cloudsearch"><a href="amazon-cloudsearch.html">CloudSearch</a>
+        -->
+    </ul>
+  </li>
