Add the hierarchy in to make the site nicer

--- a/_includes/menu-index.html
+++ b/_includes/menu-index.html
@@ -1,15 +1,15 @@
   <li class="tab-basics nav-header">Basics</li>
-  <li class="tab-installing"><a href="installing.html">Installing</a></li>
-  <li class="tab-loading"><a href="loading.html">Loading</a></li>
-  <li class="tab-async"><a href="async.html">Async</a></li>
-  <li class="tab-examples"><a href="example.html">Full Example</a></li>
+  <li class="tab-installing"><a href="/installing.html">Installing</a></li>
+  <li class="tab-loading"><a href="/loading.html">Loading</a></li>
+  <li class="tab-async"><a href="/async.html">Async</a></li>
+  <li class="tab-examples"><a href="/example.html">Full Example</a></li>
 
   <li class="tab-amazon nav-header">Web Services</li>
-  <li class="tab-amazon"><a href="amazon.html">Amazon</a>
+  <li class="tab-amazon"><a href="/amazon/">Amazon</a>
     <ul>
-      <li class="tab-amazon-s3"><a href="amazon-s3.html">Simple Storage Service (S3)</a>
+      <li class="tab-amazon-s3"><a href="/amazon/s3/">Simple Storage Service (S3)</a>
+      <li class="tab-amazon-ec2"><a href="/amazon/ec2/">Elastic Compute Cloud (EC2)</a>
         <!--
-      <li class="tab-amazon-ec2"><a href="amazon-ec2.html">Elastic Compute Cloud (EC2)</a>
       <li class="tab-amazon-emr"><a href="amazon-emr.html">Elastic MapReduce (EMR)</a>
       <li class="tab-amazon-simpledb"><a href="amazon-simpledb.html">SimpleDB</a>
       <li class="tab-amazon-sqs"><a href="amazon-sqs.html">Simple Queue Service (SQS)</a>
