--- a/_includes/menu-amazon.html
+++ b/_includes/menu-amazon.html
@@ -1,21 +1,6 @@
-<div class="well sidebar-nav">
-  <ul class="nav nav-list">
+  <li class="nav-header"><a href="/amazon/">Amazon</a></li>
+  <li class="tab-amazon-s3"><a href="/amazon/s3/">Amazon S3</a></li>
+  <li class="tab-amazon-ec2"><a href="/amazon/ec2/">Amazon EC2</a></li>
 
-    <li class="tab-amazon nav-header"><a href="amazon.html">Amazon</a></li>
-    <li class="tab-amazon-s3"><a href="amazon-s3.html">Simple Storage Service (S3)</a></li>
-    <li class="tab-amazon-ec2"><a href="amazon-ec2.html">Elastic Compute Cloud (EC2)</a></li>
-    <li class="tab-amazon-ses"><a href="amazon-ses.html">Simple Email Service (SES)</a></li>
-    <li class="tab-amazon-sns"><a href="amazon-sns.html">Simple Notification Service (SNS)</a></li>
-    <li class="tab-amazon-elb"><a href="amazon-elb.html">ElasticLoad Balancing (ELB)</a></li>
-    <li class="tab-amazon-fps"><a href="amazon-fps.html">Flexible Payments Service (FPS)</a></li>
-    <li class="tab-amazon-simpledb"><a href="amazon-simpledb.html">SimpleDB (SDB)</a></li>
-    <li class="tab-amazon-route53"><a href="amazon-route53.html">Route53 (R53)</a></li>
-    <li class="tab-amazon-elasticache"><a href="amazon-elasticache.html">ElastiCache</a></li>
-    <li class="tab-amazon-cloudfront"><a href="amazon-cloudfront.html">CloudFront</a></li>
-    <li class="tab-amazon-cloudwatch"><a href="amazon-cloudwatch.html">CloudWatch</a></li>
-    <li class="tab-amazon-dynamodb"><a href="amazon-dynamodb.html">DynamoDB</a></li>
-    <li class="tab-amazon-swf"><a href="amazon-swf.html">Simple Workflow Service (SWF)</a></li>
-    <li class="tab-amazon-iam"><a href="amazon-iam.html">Identity and Access Management (IAM)</a></li>
-
-  </ul>
-</div><!-- /.well -->
+  <li class="nav-header">Misc</li>
+  <li class="tab-amazon-signatures"><a href="amazon-signatures.html">Signatures</a></li>
