--- a/_includes/menu-index.html
+++ b/_includes/menu-index.html
@@ -35,3 +35,6 @@
         -->
     </ul>
   </li>
+
+  <li class="tab-amazon nav-header">In-Depth Examples</li>
+  <li class="tab-amazon"><a href="/examples/">Examples</a>
