More pages and structure

--- a/_includes/menu-amazon-s3.html
+++ b/_includes/menu-amazon-s3.html
@@ -1,6 +1,6 @@
-  <li class="tab-amazon-s3 nav-header">&laquo; Amazon S3</li>
-  <li><a href="#loading">Loading</a></li>
-  <li><a href="#regions">Regions/EndPoints</a></li>
+  <li><a href="/amazon/">&laquo; back</li>
+
+  <li class="tab-amazon-s3 nav-header">Amazon S3</li>
 
   <li class="nav-header">Operations on the Service</li>
   <li><a target="_new" href="http://goo.gl/ZXuPe">RESTServiceGET</a></li>
@@ -19,32 +19,32 @@
   <li><a target="_new" href="http://goo.gl/e4o8j">RESTBucketGETVersion</a></li>
   <li><a target="_new" href="http://goo.gl/1wyHo">RESTrequestPaymentGET</a></li>
   <li><a target="_new" href="http://goo.gl/2fhDX">RESTBucketGETversioningStatus</a></li>
-  <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTBucketGETwebsite.html">RESTBucketGETwebsite</a></li>
-  <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTBucketHEAD.html">RESTBucketHEAD</a></li>
-  <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/mpUploadListMPUpload.html">mpUploadListMPUpload</a></li>
-  <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTBucketPUT.html">RESTBucketPUT</a></li>
-  <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTBucketPUTacl.html">RESTBucketPUTacl</a></li>
-  <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTBucketPUTlifecycle.html">RESTBucketPUTlifecycle</a></li>
-  <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTBucketPUTpolicy.html">RESTBucketPUTpolicy</a></li>
-  <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTBucketPUTlogging.html">RESTBucketPUTlogging</a></li>
-  <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTBucketPUTnotification.html">RESTBucketPUTnotification</a></li>
-  <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTrequestPaymentPUT.html">RESTrequestPaymentPUT</a></li>
-  <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTBucketPUTVersioningStatus.html">RESTBucketPUTVersioningStatus</a></li>
-  <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTBucketPUTwebsite.html">RESTBucketPUTwebsite</a></li>
+  <li><a target="_new" href="http://goo.gl/yE5xt">RESTBucketGETwebsite</a></li>
+  <li><a target="_new" href="http://goo.gl/NgqvM">RESTBucketHEAD</a></li>
+  <li><a target="_new" href="http://goo.gl/JSDmL">mpUploadListMPUpload</a></li>
+  <li><a target="_new" href="http://goo.gl/4fpOZ">RESTBucketPUT</a></li>
+  <li><a target="_new" href="http://goo.gl/3WAQ6">RESTBucketPUTacl</a></li>
+  <li><a target="_new" href="http://goo.gl/PPkWN">RESTBucketPUTlifecycle</a></li>
+  <li><a target="_new" href="http://goo.gl/CtLau">RESTBucketPUTpolicy</a></li>
+  <li><a target="_new" href="http://goo.gl/6sqVc">RESTBucketPUTlogging</a></li>
+  <li><a target="_new" href="http://goo.gl/cnem5">RESTBucketPUTnotification</a></li>
+  <li><a target="_new" href="http://goo.gl/ecEFC">RESTrequestPaymentPUT</a></li>
+  <li><a target="_new" href="http://goo.gl/F8MD8">RESTBucketPUTVersioningStatus</a></li>
+  <li><a target="_new" href="http://goo.gl/SxPmU">RESTBucketPUTwebsite</a></li>
   <li class="nav-header">Operations on Objects</li>
-  <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTObjectDELETE.html">RESTObjectDELETE</a></li>
-  <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/multiobjectdeleteapi.html">multiobjectdeleteapi</a></li>
-  <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTObjectGET.html">RESTObjectGET</a></li>
-  <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTObjectGETacl.html">RESTObjectGETacl</a></li>
-  <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTObjectGETtorrent.html">RESTObjectGETtorrent</a></li>
-  <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTObjectHEAD.html">RESTObjectHEAD</a></li>
-  <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTObjectPOST.html">RESTObjectPOST</a></li>
-  <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTObjectPUT.html">RESTObjectPUT</a></li>
-  <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTObjectPUTacl.html">RESTObjectPUTacl</a></li>
-  <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/RESTObjectCOPY.html">RESTObjectCOPY</a></li>
-  <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/mpUploadInitiate.html">mpUploadInitiate</a></li>
-  <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/mpUploadUploadPart.html">mpUploadUploadPart</a></li>
-  <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/mpUploadUploadPartCopy.html">mpUploadUploadPartCopy</a></li>
-  <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/mpUploadComplete.html">mpUploadComplete</a></li>
-  <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/mpUploadAbort.html">mpUploadAbort</a></li>
-  <li><a target="_new" href="http://docs.amazonwebservices.com/AmazonS3/latest/API/mpUploadListParts.html">mpUploadListParts</a></li>
+  <li><a target="_new" href="http://goo.gl/niw7x">RESTObjectDELETE</a></li>
+  <li><a target="_new" href="http://goo.gl/rKiOu">multiobjectdeleteapi</a></li>
+  <li><a target="_new" href="http://goo.gl/dbeK6">RESTObjectGET</a></li>
+  <li><a target="_new" href="http://goo.gl/Azosa">RESTObjectGETacl</a></li>
+  <li><a target="_new" href="http://goo.gl/kEqp3">RESTObjectGETtorrent</a></li>
+  <li><a target="_new" href="http://goo.gl/6oFSC">RESTObjectHEAD</a></li>
+  <li><a target="_new" href="http://goo.gl/2Sv6E">RESTObjectPOST</a></li>
+  <li><a target="_new" href="http://goo.gl/Qdpkg">RESTObjectPUT</a></li>
+  <li><a target="_new" href="http://goo.gl/qzvjd">RESTObjectPUTacl</a></li>
+  <li><a target="_new" href="http://goo.gl/2L0Fv">RESTObjectCOPY</a></li>
+  <li><a target="_new" href="http://goo.gl/w12nx">mpUploadInitiate</a></li>
+  <li><a target="_new" href="http://goo.gl/uTXgt">mpUploadUploadPart</a></li>
+  <li><a target="_new" href="http://goo.gl/3dfC8">mpUploadUploadPartCopy</a></li>
+  <li><a target="_new" href="http://goo.gl/80Mgi">mpUploadComplete</a></li>
+  <li><a target="_new" href="http://goo.gl/UhdWY">mpUploadAbort</a></li>
+  <li><a target="_new" href="http://goo.gl/ZwkVa">mpUploadListParts</a></li>
