--- a/_includes/menu-amazon.html
+++ b/_includes/menu-amazon.html
@@ -1,6 +1,8 @@
-  <li class="nav-header"><a href="/amazon/">Amazon</a></li>
+  <li><a href="/">&laquo; back</li>
+
+  <li class="tab-amazon nav-header">Amazon</li>
   <li class="tab-amazon-s3"><a href="/amazon/s3/">Amazon S3</a></li>
   <li class="tab-amazon-ec2"><a href="/amazon/ec2/">Amazon EC2</a></li>
 
   <li class="nav-header">Misc</li>
-  <li class="tab-amazon-signatures"><a href="amazon-signatures.html">Signatures</a></li>
+  <li class="tab-amazon-signatures"><a href="/amazon/signatures.html">Signatures</a></li>
