Fix the close tag on the back links

--- a/_includes/menu-amazon-s3.html
+++ b/_includes/menu-amazon-s3.html
@@ -1,4 +1,4 @@
-  <li><a href="/amazon/">&laquo; back</li>
+  <li><a href="/amazon/">&laquo; back</a></li>
 
   <li class="tab-amazon-s3 nav-header">Amazon S3</li>
 
