--- a/_includes/menu-amazon-ec2.html
+++ b/_includes/menu-amazon-ec2.html
@@ -1,3 +1,3 @@
-  <li><a href="/amazon/">&laquo; back</li>
+  <li><a href="/amazon/">&laquo; back</a></li>
 
   <li class="tab-amazon-ec2 nav-header">Amazon EC2</li>
