--- a/_includes/menu-amazon.html
+++ b/_includes/menu-amazon.html
@@ -1,4 +1,4 @@
-  <li><a href="/">&laquo; back</li>
+  <li><a href="/">&laquo; back</a></li>
 
   <li class="tab-amazon nav-header">Amazon</li>
   <li class="tab-amazon-s3"><a href="/amazon/s3/">Amazon S3</a></li>
