--- a/_includes/menu-index.html
+++ b/_includes/menu-index.html
@@ -36,5 +36,15 @@
     </ul>
   </li>
 
-  <li class="tab-amazon nav-header">In-Depth Examples</li>
-  <li class="tab-amazon"><a href="/examples/">Examples</a>
+  <li class="tab-amazon nav-header"><a href="/misc/">Complimentary Packages</li>
+  <li class="tab-amazon"><a href="/misc/fmt.html">fmt</a></li>
+  <li class="tab-amazon"><a href="/misc/oibackoff.html">oibackoff</a></li>
+  <li class="tab-amazon"><a href="/misc/meteor.html">AwsSum for MeteorJS</a></li>
+
+  <li class="tab-amazon nav-header"><a href="/tools/">Tools using AwsSum</a></li>
+  <li class="tab-amazon"><a href="/tools/awssum-scripts.html">AwsSum Scripts</a>
+  <li class="tab-amazon"><a href="/tools/s3-related.html">Tools for S3</a>
+  <li class="tab-amazon"><a href="/tools/connect-middleware.html">Connect Middleware</a>
+  <li class="tab-amazon"><a href="/tools/build-tools.html">Build Tools</a>
+
+  {% include menu-tools.html %}
