--- a/_includes/menu-index.html
+++ b/_includes/menu-index.html
@@ -3,7 +3,7 @@
   <li class="tab-loading"><a href="/loading.html">Loading</a></li>
   <li class="tab-async"><a href="/async.html">Async</a></li>
   <li class="tab-examples"><a href="/example.html">Full Example</a></li>
-  <li class="tab-tools"><a href="/tools.html">Useful Tools</a></li>
+  <li class="tab-tools"><a href="/tools/">Useful Tools</a></li>
 
   <li class="tab-amazon nav-header">Web Services</li>
   <li class="tab-amazon"><a href="/amazon/">Amazon</a>
@@ -36,15 +36,9 @@
     </ul>
   </li>
 
-  <li class="tab-amazon nav-header"><a href="/misc/">Complimentary Packages</li>
-  <li class="tab-amazon"><a href="/misc/fmt.html">fmt</a></li>
-  <li class="tab-amazon"><a href="/misc/oibackoff.html">oibackoff</a></li>
-  <li class="tab-amazon"><a href="/misc/meteor.html">AwsSum for MeteorJS</a></li>
+  <li class="tab-amazon nav-header">The Ecosystem</li>
 
-  <li class="tab-amazon nav-header"><a href="/tools/">Tools using AwsSum</a></li>
-  <li class="tab-amazon"><a href="/tools/awssum-scripts.html">AwsSum Scripts</a>
-  <li class="tab-amazon"><a href="/tools/s3-related.html">Tools for S3</a>
-  <li class="tab-amazon"><a href="/tools/connect-middleware.html">Connect Middleware</a>
-  <li class="tab-amazon"><a href="/tools/build-tools.html">Build Tools</a>
+  <li class="tab-amazon nav-header"><a href="/tools/">Tools built using AwsSum</a></li>
+  <li class="tab-amazon nav-header"><a href="/misc/">Misc Other</a></li>
 
   {% include menu-tools.html %}
