Fix up some menus and the front page

--- a/_includes/menu-index.html
+++ b/_includes/menu-index.html
@@ -36,9 +36,6 @@
     </ul>
   </li>
 
-  <li class="tab-amazon nav-header">The Ecosystem</li>
-
-  <li class="tab-amazon nav-header"><a href="/tools/">Tools built using AwsSum</a></li>
-  <li class="tab-amazon nav-header"><a href="/misc/">Misc Other</a></li>
-
-  {% include menu-tools.html %}
+  <li class="tab-amazon nav-header">The Wider Ecosystem</li>
+  <li class="tab-amazon"><a href="/tools/">Tools built using AwsSum</a></li>
+  <li class="tab-amazon"><a href="/misc/">Misc Other</a></li>
