More bits for the Amazon services

--- a/_includes/menu-amazon-s3.html
+++ b/_includes/menu-amazon-s3.html
@@ -1,15 +1,20 @@
   <li><a href="/amazon/">&laquo; back</a></li>
 
   <li class="tab-amazon-s3 nav-header">Amazon S3</li>
+  <li>ToDo</li>
+  <!--
 
   <li class="nav-header">Operations on the Service</li>
-  <li><a target="_new" href="http://goo.gl/ZXuPe">RESTServiceGET</a></li>
+  <li><a target="_new" href="http://goo.gl/ZXuPe">ListBuckets</a></li>
   <li class="nav-header">Operations on Buckets</li>
-  <li><a target="_new" href="http://goo.gl/zVsy0">RESTBucketDELETE</a></li>
-  <li><a target="_new" href="http://goo.gl/s4pJA">RESTBucketDELETElifecycle</a></li>
-  <li><a target="_new" href="http://goo.gl/J3abr">RESTBucketDELETEpolicy</a></li>
-  <li><a target="_new" href="http://goo.gl/y1tSC">RESTBucketDELETEwebsite</a></li>
-  <li><a target="_new" href="http://goo.gl/b1mSD">RESTBucketGET</a></li>
+  <li><a target="_new" href="http://goo.gl/zVsy0">DeleteBucket</a></li>
+  <li><a target="_new" href="http://goo.gl/s4pJA">DeleteBucketLifecycle</a></li>
+  <li><a target="_new" href="http://goo.gl/J3abr">DeleteBucketPolicy</a></li>
+  -->
+  <!-- DeleteBucketTagging -->
+  <!--
+  <li><a target="_new" href="http://goo.gl/y1tSC">DeleteBucketWebsite</a></li>
+  <li><a target="_new" href="http://goo.gl/b1mSD">ListObjects</a></li>
   <li><a target="_new" href="http://goo.gl/xuKcm">RESTBucketGETacl</a></li>
   <li><a target="_new" href="http://goo.gl/5lcaM">RESTBucketGETlifecycle</a></li>
   <li><a target="_new" href="http://goo.gl/oYzIF">RESTBucketGETpolicy</a></li>
@@ -48,3 +53,4 @@
   <li><a target="_new" href="http://goo.gl/80Mgi">mpUploadComplete</a></li>
   <li><a target="_new" href="http://goo.gl/UhdWY">mpUploadAbort</a></li>
   <li><a target="_new" href="http://goo.gl/ZwkVa">mpUploadListParts</a></li>
+  -->
