Add the changelog link to the main menu

--- a/_includes/menu-index.html
+++ b/_includes/menu-index.html
@@ -4,6 +4,7 @@
   <li class="tab-async"><a href="/async.html">Async</a></li>
   <li class="tab-examples"><a href="/example.html">Full Example</a></li>
   <li class="tab-tools"><a href="/tools/">Useful Tools</a></li>
+  <li class="tab-tools"><a href="/changelog.html">ChangeLog</a></li>
 
   <li class="tab-amazon nav-header">Web Services</li>
   <li class="tab-amazon"><a href="/amazon/">Amazon</a>
