--- a/_includes/menu-misc.html
+++ b/_includes/menu-misc.html
@@ -1,3 +1,1 @@
-  <li class="tab-basics nav-header"><a href="/">&laquo; Home</a></li>
-  <li class="tab-basics nav-header">Examples</li>
-  <li class="tab-installing"><a href="/examples/incremental-backoff.html">Incremental Backoff</a></li>
+  <li><a href="/">&laquo; back</a></li>
