typos + SimpleDB.Select example
added focus on modular way AWSSUM is set up and added first (simple)
example.

--- a/_includes/menu-amazon.html
+++ b/_includes/menu-amazon.html
@@ -3,6 +3,7 @@
   <li class="tab-amazon nav-header">Amazon</li>
   <li class="tab-amazon-s3"><a href="/amazon/s3/">Amazon S3</a></li>
   <li class="tab-amazon-ec2"><a href="/amazon/ec2/">Amazon EC2</a></li>
+  <li class="tab-amazon-simpledb"><a href="/amazon/simpledb/">Amazon SimpleDB</a></li>
 
   <li class="nav-header">Misc</li>
   <li class="tab-amazon-signatures"><a href="/amazon/signatures.html">Signatures</a></li>
