--- a/_includes/menu-index.html
+++ b/_includes/menu-index.html
@@ -8,11 +8,12 @@
   <li class="tab-amazon nav-header">Web Services</li>
   <li class="tab-amazon"><a href="/amazon/">Amazon</a>
     <ul>
-      <li class="tab-amazon-s3"><a href="/amazon/s3/">Simple Storage Service (S3)</a>
-      <li class="tab-amazon-ec2"><a href="/amazon/ec2/">Elastic Compute Cloud (EC2)</a>
+      <li class="tab-amazon-s3"><a href="/amazon/s3/">Simple Storage Service (S3)</a></li>
+      <li class="tab-amazon-ec2"><a href="/amazon/ec2/">Elastic Compute Cloud (EC2)</a></li>
+      <li class="tab-amazon-simpledb"><a href="/amazon/simpledb/">SimpleDB</a></li>
         <!--
       <li class="tab-amazon-emr"><a href="amazon-emr.html">Elastic MapReduce (EMR)</a>
-      <li class="tab-amazon-simpledb"><a href="amazon-simpledb.html">SimpleDB</a>
+
       <li class="tab-amazon-sqs"><a href="amazon-sqs.html">Simple Queue Service (SQS)</a>
       <li class="tab-amazon-sns"><a href="amazon-sns.html">Simple Notification Service (SNS)</a>
       <li class="tab-amazon-ses"><a href="amazon-ses.html">Simple Email Service (SES)</a>
