--- a/_includes/menu-misc.html
+++ b/_includes/menu-misc.html
@@ -1,1 +1,5 @@
   <li><a href="/">&laquo; back</a></li>
+
+  <li class="tab-misc nav-header"><a href="/misc/">Misc</a></li>
+  <li class="tab-misc-fmt"><a href="/misc/fmt.html">fmt</a>
+  <li class="tab-misc-incremental-backoff"><a href="/misc/incremental-backoff.html">Incremental Backoff</a>
