Remove back from all the misc and tools pages

--- a/_includes/menu-misc.html
+++ b/_includes/menu-misc.html
@@ -1,5 +1,5 @@
   <li><a href="/">&laquo; back</a></li>
 
-  <li class="tab-misc nav-header"><a href="/misc/">Misc</a></li>
+  <li class="tab-misc nav-header">Misc</li>
   <li class="tab-misc-fmt"><a href="/misc/fmt.html">fmt</a>
   <li class="tab-misc-incremental-backoff"><a href="/misc/incremental-backoff.html">Incremental Backoff</a>
