--- a/_includes/menu-tools.html
+++ b/_includes/menu-tools.html
@@ -1,4 +1,6 @@
-  <li class="tab-tools nav-header"><a href="/tools/">Tools using AwsSum</a></li>
+  <li><a href="/">&laquo; back</a></li>
+
+  <li class="tab-tools nav-header">Tools using AwsSum</li>
   <li class="tab-tools-amazon-scripts"><a href="/tools/amazon-scripts.html">Amazon Scripts</a>
   <li class="tab-tools-s3-related"><a href="/tools/s3-related.html">Tools for S3</a>
   <li class="tab-tools-connect-middleware"><a href="/tools/connect-middleware.html">Connect Middleware</a>
