Add all the Amazon:S3 operations

--- a/_includes/menu-amazon-s3.html
+++ b/_includes/menu-amazon-s3.html
@@ -1,56 +1,55 @@
   <li><a href="/amazon/">&laquo; back</a></li>
 
   <li class="tab-amazon-s3 nav-header">Amazon S3</li>
-  <li>ToDo</li>
-  <!--
 
   <li class="nav-header">Operations on the Service</li>
-  <li><a target="_new" href="http://goo.gl/ZXuPe">ListBuckets</a></li>
+  <a href="list-buckets.html">ListBuckets</a>
+
   <li class="nav-header">Operations on Buckets</li>
-  <li><a target="_new" href="http://goo.gl/zVsy0">DeleteBucket</a></li>
-  <li><a target="_new" href="http://goo.gl/s4pJA">DeleteBucketLifecycle</a></li>
-  <li><a target="_new" href="http://goo.gl/J3abr">DeleteBucketPolicy</a></li>
-  -->
-  <!-- DeleteBucketTagging -->
-  <!--
-  <li><a target="_new" href="http://goo.gl/y1tSC">DeleteBucketWebsite</a></li>
-  <li><a target="_new" href="http://goo.gl/b1mSD">ListObjects</a></li>
-  <li><a target="_new" href="http://goo.gl/xuKcm">RESTBucketGETacl</a></li>
-  <li><a target="_new" href="http://goo.gl/5lcaM">RESTBucketGETlifecycle</a></li>
-  <li><a target="_new" href="http://goo.gl/oYzIF">RESTBucketGETpolicy</a></li>
-  <li><a target="_new" href="http://goo.gl/OH5KI">RESTBucketGETlocation</a></li>
-  <li><a target="_new" href="http://goo.gl/Wm5XB">RESTBucketGETlogging</a></li>
-  <li><a target="_new" href="http://goo.gl/ncze1">RESTBucketGETnotification</a></li>
-  <li><a target="_new" href="http://goo.gl/e4o8j">RESTBucketGETVersion</a></li>
-  <li><a target="_new" href="http://goo.gl/1wyHo">RESTrequestPaymentGET</a></li>
-  <li><a target="_new" href="http://goo.gl/2fhDX">RESTBucketGETversioningStatus</a></li>
-  <li><a target="_new" href="http://goo.gl/yE5xt">RESTBucketGETwebsite</a></li>
-  <li><a target="_new" href="http://goo.gl/NgqvM">RESTBucketHEAD</a></li>
-  <li><a target="_new" href="http://goo.gl/JSDmL">mpUploadListMPUpload</a></li>
-  <li><a target="_new" href="http://goo.gl/4fpOZ">RESTBucketPUT</a></li>
-  <li><a target="_new" href="http://goo.gl/3WAQ6">RESTBucketPUTacl</a></li>
-  <li><a target="_new" href="http://goo.gl/PPkWN">RESTBucketPUTlifecycle</a></li>
-  <li><a target="_new" href="http://goo.gl/CtLau">RESTBucketPUTpolicy</a></li>
-  <li><a target="_new" href="http://goo.gl/6sqVc">RESTBucketPUTlogging</a></li>
-  <li><a target="_new" href="http://goo.gl/cnem5">RESTBucketPUTnotification</a></li>
-  <li><a target="_new" href="http://goo.gl/ecEFC">RESTrequestPaymentPUT</a></li>
-  <li><a target="_new" href="http://goo.gl/F8MD8">RESTBucketPUTVersioningStatus</a></li>
-  <li><a target="_new" href="http://goo.gl/SxPmU">RESTBucketPUTwebsite</a></li>
+  <a href="delete-buckets.html">DeleteBuckets</a>
+  <a href="delete-bucket-lifecycle.html">DeleteBucketLifecycle</a>
+  <a href="delete-bucket-policy.html">DeleteBucketPolicy</a>
+  <a href="delete-bucket-tagging.html">DeleteBucketTagging</a>
+  <a href="delete-bucket-website.html">DeleteBucketWebsite</a>
+  <a href="list-objects.html">ListObjects</a>
+  <a href="get-bucket-acl.html">GetBucketAcl</a>
+  <a href="get-bucket-lifecycle.html">GetBucketLifecycle</a>
+  <a href="get-bucket-policy.html">GetBucketPolicy</a>
+  <a href="get-bucket-tagging.html">GetBucketTagging</a>
+  <a href="get-bucket-location.html">GetBucketLocation</a>
+  <a href="get-bucket-logging.html">GetBucketLogging</a>
+  <a href="get-bucket-notification.html">GetBucketNotification</a>
+  <a href="get-bucket-objectversions.html">GetBucketObjectVersions</a>
+  <a href="get-bucket-requestpayment.html">GetBucketRequestPayment</a>
+  <a href="get-bucket-versioning.html">GetBucketVersioning</a>
+  <a href="get-bucket-website.html">GetBucketWebsite</a>
+  <a href="check-bucket.html">CheckBucket</a>
+  <a href="list-multipart-uploads.html">ListMultipartUploads</a>
+  <a href="create-bucket.html">CreateBucket</a>
+  <a href="put-bucket-acl.html">PutBucketAcl</a>
+  <a href="put-bucket-lifecycle.html">PutBucketLifecycle</a>
+  <a href="put-bucket-policy.html">PutBucketPolicy</a>
+  <a href="put-bucket-logging.html">PutBucketLogging</a>
+  <a href="put-bucket-notification.html">PutBucketNotification</a>
+  <a href="put-bucket-tagging.html">PutBucketTagging</a>
+  <a href="put-bucket-requestpayment.html">PutBucketRequestPayment</a>
+  <a href="put-bucket-versioning.html">PutBucketVersioning</a>
+  <a href="put-bucket-website.html">PutBucketWebsite</a>
+
   <li class="nav-header">Operations on Objects</li>
-  <li><a target="_new" href="http://goo.gl/niw7x">RESTObjectDELETE</a></li>
-  <li><a target="_new" href="http://goo.gl/rKiOu">multiobjectdeleteapi</a></li>
-  <li><a target="_new" href="http://goo.gl/dbeK6">RESTObjectGET</a></li>
-  <li><a target="_new" href="http://goo.gl/Azosa">RESTObjectGETacl</a></li>
-  <li><a target="_new" href="http://goo.gl/kEqp3">RESTObjectGETtorrent</a></li>
-  <li><a target="_new" href="http://goo.gl/6oFSC">RESTObjectHEAD</a></li>
-  <li><a target="_new" href="http://goo.gl/2Sv6E">RESTObjectPOST</a></li>
-  <li><a target="_new" href="http://goo.gl/Qdpkg">RESTObjectPUT</a></li>
-  <li><a target="_new" href="http://goo.gl/qzvjd">RESTObjectPUTacl</a></li>
-  <li><a target="_new" href="http://goo.gl/2L0Fv">RESTObjectCOPY</a></li>
-  <li><a target="_new" href="http://goo.gl/w12nx">mpUploadInitiate</a></li>
-  <li><a target="_new" href="http://goo.gl/uTXgt">mpUploadUploadPart</a></li>
-  <li><a target="_new" href="http://goo.gl/3dfC8">mpUploadUploadPartCopy</a></li>
-  <li><a target="_new" href="http://goo.gl/80Mgi">mpUploadComplete</a></li>
-  <li><a target="_new" href="http://goo.gl/UhdWY">mpUploadAbort</a></li>
-  <li><a target="_new" href="http://goo.gl/ZwkVa">mpUploadListParts</a></li>
-  -->
+  <a href="delete-object.html">DeleteObject</a>
+  <a href="delete-multipleobjects.html">DeleteMultipleObjects</a>
+  <a href="get-object.html">GetObject</a>
+  <a href="get-object-acl.html">GetObjectAcl</a>
+  <a href="get-object-torrent.html">GetObjectTorrent</a>
+  <a href="get-object-metadata.html">GetObjectMetadata</a>
+  <!--  PostObject -->
+  <a href="put-object.html">PutObject</a>
+  <a href="put-object-acl.html">PutObjectAcl</a>
+  <a href="copy-object.html">CopyObject</a>
+  <a href="initiate-multipart-upload.html">InitiateMultipartUpload</a>
+  <a href="upload-part.html">UploadPart</a>
+  <a href="upload-part-copy.html">UploadPartCopy</a>
+  <a href="complete-multipart-upload.html">CompleteMultipartUpload</a>
+  <a href="abort-multipart-upload.html">AbortMultipartUpload</a>
+  <a href="list-parts.html">ListParts</a>
